# sabos

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  TODO.md  TODO_net.md  TODO_std.md  devbox.json  rust-toolchain.toml  setup-ubuntu.sh  x86_64-sabos.json
docs/: 2026-02-01.md  2026-02-02.md  2026-02-03.md
kernel/: Cargo.toml
kernel/src/: ac97.rs  acpi.rs  ahci.rs  allocator.rs  apic.rs  console.rs  e1000e.rs  elf.rs  fat16.rs  fat32.rs  fat32_ipc.rs  framebuffer.rs  futex.rs  gdt.rs  handle.rs  interrupts.rs  ipc.rs  main.rs  memory.rs  mouse.rs  net.rs  net_config.rs  netstack.rs  nvme.rs  paging.rs  panic.rs  pci.rs  pipe.rs  procfs.rs  qemu.rs  rtc.rs  scheduler.rs  serial.rs  shell.rs  slab_allocator.rs  syscall.rs  user_ptr.rs  usermode.rs  vfs.rs  virtio_9p.rs  (+3 more)
kernel/src/netstack/: arp.rs  dhcp.rs  dns.rs  icmp.rs  ipv6.rs  mod.rs  tcp.rs  types.rs  udp.rs
kernel/src/shell/: commands.rs  mod.rs  selftest.rs
kernel/src/syscall/: console.rs  filesystem.rs  graphics.rs  handle.rs  ipc.rs  misc.rs  mod.rs  network.rs  process.rs  sysinfo.rs
rust-std-sabos/: os_sabos_ffi.rs  os_sabos_mod.rs  sys_alloc_sabos.rs  sys_args_sabos.rs  sys_env_sabos.rs  sys_fs_sabos.rs  sys_net_connection_sabos.rs  sys_pal_sabos_common.rs  sys_pal_sabos_mod.rs  sys_pal_sabos_os.rs  (+6 more)
user/: Cargo.toml  linker.ld
user/.cargo/: config.toml
user/src/: allocator.rs  allocator_fat32d.rs  allocator_gui.rs  args.rs  blockdev_user.rs  fat16.rs  fat32.rs  gui_client.rs  json.rs  main.rs  net.rs  netstack.rs  print.rs  shell.rs  syscall.rs  syscall_fat32d.rs  syscall_netd.rs
(+47 files in other folders)
