[package]
name = "sabos"
version = "0.1.0"
edition = "2024"

[dependencies]
uefi = { version = "0.35" }
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
x86_64 = "0.15"
lazy_static = { version = "1", features = ["spin_no_std"] }
spin = "0.9"
pic8259 = "0.11"
pc-keyboard = "0.7"
sabos-blockdev = { path = "../libs/blockdev" }
sabos-fat-core = { path = "../libs/fat-core" }
sabos-textutil = { path = "../libs/textutil" }
sabos-syscall = { path = "../libs/sabos-syscall" }

[features]
# 起動時のデモを有効化する。普段は無効にしてシェルの起動を優先する。
boot-demos = []
