[package]
name = "sabos-user"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
log = { version = "0.4.29", default-features = false }
sabos-blockdev = { path = "../libs/blockdev" }
sabos-fat-core = { path = "../libs/fat-core" }
sabos-textutil = { path = "../libs/textutil" }
